--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ Cargo.lock
 TODO.md
 DEVELOPMENT_ROADMAP.md
 CLAUDE.md
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
